fix build for grails 7.0.0 SNAPSHOT